# kalshi-mcp

./: .env.example  .gitignore  LICENSE  PYPI_SETUP.md  README.md  SUBMISSION.md  kalshi_mcp.py  publish.py  pyproject.toml  server.json
.github/workflows/: ci.yml
