[project]
name = "kalshi-mcp"
version = "0.1.0"
description = "MCP server for Kalshi prediction markets - search, analyze, and trade prediction markets through Claude Desktop"
authors = [{name = "yakub268"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27.0",
    "cryptography>=42.0.0",
]

[project.urls]
Homepage = "https://github.com/yakub268/kalshi-mcp"
Repository = "https://github.com/yakub268/kalshi-mcp"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
